<resources>
    <string name="app_name" translatable="false">SBG Scout</string>
    <string name="location_permission_denied">Location is disabled. Grant access in settings.</string>
    <string name="script_execution_error">Script execution error: %s</string>

    <string name="loading_scripts">Loading scripts\u2026</string>
    <string name="loading_default_scripts">Loading default scripts\u2026</string>
    <string name="loading_default_script">Loading %s\u2026</string>
    <string name="provisioning_failed">Failed to load default scripts. You can try again or continue without them.</string>
    <string name="provisioning_retry">Retry</string>
    <string name="provisioning_skip">Continue without scripts</string>
    <string name="no_scripts">No scripts installed</string>
    <string name="conflict_label">Incompatible with:</string>
    <string name="add_script">Add script</string>
    <string name="add_script_by_url">By URL</string>
    <string name="add_script_from_file">From file</string>
    <string name="file_read_error">Failed to read file: %s</string>
    <string name="script_url_hint">Script URL (.user.js)</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="select_version">Select version</string>
    <string name="reinstall">Reinstall</string>
    <string name="script_menu">Script menu</string>
    <string name="delete_script">Delete script</string>
    <string name="delete_script_confirmation">Delete %s?</string>
    <string name="check_updates">Check for updates</string>
    <string name="update_all">Update all</string>

    <string name="script_added">Script %s added</string>
    <string name="script_add_failed">Failed to add script: %s</string>
    <string name="script_deleted">Script %s deleted</string>
    <string name="updates_applied">Scripts updated: %d</string>
    <string name="no_updates">No updates available</string>
    <string name="updates_available">Updates available: %d</string>
    <string name="script_updates_available">Script updates available</string>
    <string name="script_updates_title">Updates</string>
    <string name="scripts_updated">Scripts updated</string>

    <string name="status_downloaded">Downloaded</string>
    <string name="status_up_to_date">latest</string>
    <string name="status_update_available">Update available</string>
    <string name="update">Update</string>
    <string name="download_script">Download</string>

    <string name="loading_versions">Loading versions\u2026</string>
    <string name="version_load_failed">Failed to load versions: %s</string>
    <string name="version_current_marker">(current)</string>
    <string name="install">Install</string>
    <string name="version_install_completed">Installed %s</string>
    <string name="reinstall_completed">Reinstalled %s</string>
    <string name="reinstall_failed">Failed to reinstall: %s</string>
    <string name="settings">Settings</string>
    <string name="app_settings_button">SBG Scout settings</string>
    <string name="app_settings_short">SBG Scout settings</string>
    <string name="reload_button">Reload</string>
    <string name="game_initializing">Initializing game\u2026</string>
    <string name="close_settings">Close</string>
    <string name="close_settings_symbol" translatable="false">[x]</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_fullscreen">Fullscreen mode</string>
    <string name="settings_fullscreen_summary">Hide status bar and navigation buttons</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_keep_screen_on_summary">Prevent screen from turning off while in game</string>
    <string name="settings_lock_portrait_orientation">Lock portrait orientation</string>
    <string name="settings_lock_portrait_orientation_summary">Prevent rotation to landscape orientation</string>
    <string name="settings_category_scripts">Scripts</string>
    <string name="settings_category_game">Game</string>
    <string name="settings_auto_update">Check for updates once a day on game load</string>
    <string name="settings_category_updates">Updates</string>
    <string name="settings_auto_check_updates">Auto-check updates</string>
    <string name="settings_auto_check_updates_summary">Check for app and script updates once a day on game load</string>
    <string name="settings_check_app_update">Check for app updates</string>
    <string name="settings_check_app_update_summary">Check if a new version is available on GitHub</string>
    <string name="settings_check_script_updates">Check for script updates</string>
    <string name="settings_check_script_updates_summary">Check if scripts have new versions</string>
    <string name="app_update_checking">Checking for updates\u2026</string>
    <string name="app_update_available">App update available</string>
    <string name="app_update_download">Download</string>
    <string name="app_up_to_date">App is up to date</string>
    <string name="app_update_check_failed">Failed to check for updates</string>
    <string name="app_update_downloading">Downloading update\u2026</string>
    <string name="app_update_download_failed">Failed to download update: %s</string>
    <string name="settings_category_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_manage_scripts">Script manager</string>
    <string name="settings_manage_scripts_summary">Manage installed userscripts</string>
    <string name="reload_game">Reload game</string>
    <string name="settings_reload_game_summary">Reload the game page in the browser</string>
    <string name="settings_open_links_in_app">Open sbg-game.ru links in the app</string>
    <string name="settings_open_links_in_app_summary">Open Android settings to set this app as the default handler for sbg-game.ru links</string>
    <string name="settings_report_bug">Report a bug</string>
    <string name="settings_report_bug_summary">Copy diagnostics and open GitHub Issues</string>
    <string name="bug_report_copied">Copied! Opening\u2026</string>
    <string name="settings_beta_server_title">Beta server</string>
    <string name="settings_beta_server_enable_message">Switch to beta.sbg-game.ru? The game page will reload.</string>
    <string name="settings_beta_server_disable_message">Switch back to sbg-game.ru? The game page will reload.</string>
    <string name="settings_beta_server_confirm">Switch</string>
    <string name="download_saved">Saved: %s</string>
    <string name="download_failed">Download failed</string>
</resources>
